# AlgoesAnalysis

./: .gitignore  README.md
lab_01/: CMakeLists.txt
lab_01/include/: CharWordHandler.h  DamerauLevenshtein.h  DamerauLevenshteinRecursive.h  EditDistanceCalculator.h  EditDistanceMethod.h  EditDistanceTester.h  LevenshteinRecursive.h  TestManager.h  Utility.h  WagnerFischer.h
lab_01/include/template/: DamerauLevenshtein.hxx  DamerauLevenshteinRecursive.hxx  EditDistanceTester.hxx  LevenshteinRecursive.hxx  WagnerFischer.hxx
lab_01/other/: genwords.py  in_1.txt  mattest.txt  rectest.txt
lab_01/report/: analysis.tex  biblio.tex  concl.tex  design.tex  impl.tex  intro.tex  main.bib  main.tex  research.tex  title.tex
lab_01/report/data/: damerau-levenshtein-1.csv  damerau-levenshtein-2.csv  damerau-levenshtein-rec-2.csv  wagner-fischer-1.csv
lab_01/report/graph/: damerau-levenshteain-part1.graphml  damerau-levenshteain-part2.graphml  damerau-levenshteain.graphml  damerau-levenshteainrec-part1.graphml  damerau-levenshteainrec-part2.graphml  damerau-levenshteainrec-part3.graphml  damerau-levenshteainrec.graphml  wagner-fischer-all.graphml  wagner-fischer-part1.graphml  wagner-fischer-part2.graphml  wagner-fischer-part3.graphml  wagner-fischer.graphml
lab_01/source/: TestManager.cc  main.cc
lab_02/: CMakeLists.txt
lab_02/data/: in_1.txt  test_even_classic.txt  test_even_owinograd.txt  test_even_winograd.txt  test_uneven_classic.txt  test_uneven_owinograd.txt  test_uneven_winograd.txt
lab_02/include/: MatrixMul.h  Utility.h
lab_02/report/: analysis.tex  biblio.tex  concl.tex  design.tex  impl.tex  intro.tex  research.tex  title.tex
lab_02/report/data/: test_even_classic.csv  test_even_owinograd.csv  test_even_winograd.csv  test_uneven_classic.csv  test_uneven_owinograd.csv  test_uneven_winograd.csv
lab_02/report/graph/: classicmul.graphml  owinograd-part1.graphml
lab_02/source/: MatrixMul.cc  main.cc
lab_03/: CMakeLists.txt
lab_03/include/: Sort.h  insertionsort.hh  quicksort.hh  shakersort.hh
lab_03/report/: '  analysis.tex  biblio.tex  concl.tex  design.tex  impl.tex  intro.tex  research.tex  title.tex
lab_03/report/data/: ind.csv  ini.csv  inr.csv  qsd.csv  qsi.csv  qsr.csv  shd.csv  shi.csv  shr.csv
lab_03/report/graph/: insertionsort.graphml  mainIdef0.graphml  qsort.graphml  shakersort.graphml
lab_03/source/: main.cc
lab_04/: CMakeLists.txt
lab_04/include/: MatrixMul.h  Utility.h
lab_04/report/: analysis.tex  biblio.tex  concl.tex  design.tex  impl.tex  intro.tex  research.tex  title.tex
lab_04/report/data/: test_even_1.csv  test_even_16.csv  test_even_2.csv  test_even_3.csv  test_even_32.csv  test_even_4.csv  test_even_8.csv  test_even_owinograd.csv  test_uneven_1.csv  test_uneven_16.csv  test_uneven_2.csv  (+4 more)
lab_04/source/: MatrixMul.cc  main.cc
lab_05/: CMakeLists.txt
lab_05/include/: MatrixDescriptor.h  MatrixMul.h
lab_05/report/: analysis.tex  biblio.tex  concl.tex  design.tex  impl.tex  intro.tex  research.tex  title.tex
lab_05/source/: MatrixMul.cc  main.cc
lab_06/: CMakeLists.txt
lab_06/include/: AntColony.h  BruteSalesman.h  Salesman.h  Utility.h
lab_06/report/graph/: ant.graphml  idef0_1.graphml  idef0_2.graphml
lab_06/source/: AntColony.cc  BruteSalesman.cc  Salesman.cc  main.cc
(+18 files in other folders)
